--- a/vdftoextractor.ipynb
+++ b/vdftoextractor.ipynb
@@ -168,7 +168,6 @@
     "# Define the path to the file\n",
     "file_path = '/home/shivaji/Documents/vdffiletextmanipulation/output/freqgas.vdf'\n",
     "\n",
-    "# Initialize a list to store the extracted pairs\n",
     "extracted_pairs = []\n",
     "pattern2 = r\"^s\\s\\s?\\d+\\s+\\w+\\s+\\w+\"#r\"^s\\s\\d{1,3}\\s+\\w+\\s+\\w+\"\n",
     "another_pairs = []\n",
@@ -191,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -346,7 +345,7 @@
        " 's139(61)']"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -367,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -522,7 +521,7 @@
        " 's147': 'TORS CNCN'}"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -539,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -559,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -714,7 +713,7 @@
        " 'TORS CCOC(61)']"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -726,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -881,7 +880,7 @@
        " 'TORS CCOC(61)']"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -895,7 +894,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1050,7 +1049,7 @@
        " 'TORS CCOC(61)']"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1062,7 +1061,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1071,16 +1070,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "symbol = [\"\\u03BD\", \"\\u03B2\", \"\\u03B4\", \"\\u03BA\"] # unicode character for my, beta and delta"
+    "symbol = [\"\\u03BD\", \"\\u03B2\", \"\\u03B4\", \"\\u03BA\"] # unicode character for nu, beta and delta"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1232,167 +1231,17 @@
        " 'δ CCNC(11) δ CCNC(64)',\n",
        " 'δ CCNC(50)',\n",
        " 'δ CCOC(62)',\n",
-       " 'δ CCOC(61)',\n",
-       " 'ν NH(100)',\n",
-       " 'ν NH(100)',\n",
-       " 'ν CH(88)',\n",
-       " 'ν CH(95)',\n",
-       " 'ν CH(87)',\n",
-       " 'ν CH(95)',\n",
-       " 'ν CH(98)',\n",
-       " 'ν CH(79) ν CH(18)',\n",
-       " 'ν CH(17) ν CH(82)',\n",
-       " 'ν CH(100)',\n",
-       " 'ν CH(98)',\n",
-       " 'ν CH(11) ν CH(88)',\n",
-       " 'ν CH(93)',\n",
-       " 'ν CH(87) ν CH(12)',\n",
-       " 'ν CH(94)',\n",
-       " 'ν CH(86)',\n",
-       " 'ν CH(99)',\n",
-       " 'ν CH(93)',\n",
-       " 'ν CH(12) ν CH(87)',\n",
-       " 'ν CH(99)',\n",
-       " 'ν CH(94)',\n",
-       " 'ν CH(88) ν CH(11)',\n",
-       " 'ν CH(93)',\n",
-       " 'ν OC(78)',\n",
-       " 'ν CC(64) β HCC(21)',\n",
-       " 'ν CC(38)',\n",
-       " 'ν CC(23) β CCC(11)',\n",
-       " 'ν NC(22) β HNC(14)',\n",
-       " 'ν CC(53)',\n",
-       " 'ν NC(59) β HNC(14)',\n",
-       " 'ν NC(48) ν NC(14)',\n",
-       " 'β HCC(53) β CCC(11)',\n",
-       " 'β HCH(60) δ HCCC(13)',\n",
-       " 'β HCH(48)',\n",
-       " 'β HCH(49) δ HCNC(16)',\n",
-       " 'β HCH(72) δ HCCN(21)',\n",
-       " 'β HCH(46)',\n",
-       " 'β HNC(44) β HCN(16)',\n",
-       " 'β HCC(14) β HCH(14)',\n",
-       " 'ν CC(13) β HCC(21)',\n",
-       " 'β HCH(11) β HCH(47) δ HCCN(13)',\n",
-       " 'β HCH(61)',\n",
-       " 'ν CC(13) β HCC(21)',\n",
-       " 'ν NC(15) β HCN(18)',\n",
-       " 'β HNC(17) β HCH(18)',\n",
-       " 'β HCH(70)',\n",
-       " 'ν NC(12) β HCH(39) δ HCNC(14)',\n",
-       " 'β HCN(23) δ HCNC(13)',\n",
-       " 'β HCH(12) β HCH(28) δ HCNC(34)',\n",
-       " 'β HNC(11) β HCO(16)',\n",
-       " 'ν OC(14) β HCO(17) β HCN(24)',\n",
-       " 'ν CC(11) β HCC(78)',\n",
-       " 'ν NC(22) β HNC(15) β HCH(12)',\n",
-       " 'β HCN(17) β HCN(11)',\n",
-       " 'ν CC(48) β HCC(14)',\n",
-       " 'β HCO(30) β NCN(11) δ HCOC(22)',\n",
-       " 'ν CC(49) β HCC(11)',\n",
-       " 'β HCN(17) δ HCNC(13)',\n",
-       " 'ν CC(12) ν CC(22)',\n",
-       " 'ν CC(13) β HCC(25)',\n",
-       " 'ν NC(24) β HCN(16) β HCN(16)',\n",
-       " 'ν NC(18) ν NC(22)',\n",
-       " 'ν CC(51) β HCC(19)',\n",
-       " 'ν CC(22) β HCC(73)',\n",
-       " 'ν CC(17) β HCC(50)',\n",
-       " 'ν CC(11) β HCC(77)',\n",
-       " 'ν NC(49)',\n",
-       " 'ν NC(47)',\n",
-       " 'ν CC(11) β CCC(11) β HCC(11)',\n",
-       " 'ν CC(20) ν CC(16) β HCC(11)',\n",
-       " 'ν CC(27) β HCC(29)',\n",
-       " 'δ CCNC(11)',\n",
-       " 'ν OC(25)',\n",
-       " 'δ HCCC(44)',\n",
-       " 'β HCH(20) δ HCCN(55)',\n",
-       " 'ν CC(24) β HCC(18)',\n",
-       " 'ν OC(15)',\n",
-       " 'β CCC(59)',\n",
-       " 'β HCH(12) δ HCCN(38)',\n",
-       " 'ν CC(42) δ HCCC(14) δ HCCC(15)',\n",
-       " 'δ HCNC(77) δ CNCN(17)',\n",
-       " 'ν NC(35) β NCN(34)',\n",
-       " 'δ HCCC(67) δ CCCC(28)',\n",
-       " 'δ HCCC(28)',\n",
-       " 'δ HCCC(46)',\n",
-       " 'δ HCCC(85) δ CCCC(15)',\n",
-       " 'δ HCCC(77)',\n",
-       " 'δ HCCC(73)',\n",
-       " 'ν CC(49)',\n",
-       " 'ν CC(11) ν CC(15) δ HCNC(12)',\n",
-       " 'δ HCCC(95)',\n",
-       " 'ν CC(27) β CCC(16)',\n",
-       " 'δ CNCN(83)',\n",
-       " 'β CCC(15)',\n",
-       " 'β CCC(25)',\n",
-       " 'δ HCCC(54)',\n",
-       " 'δ HCCC(14) δ HCCC(17) δ CCCC(33)',\n",
-       " 'ν CC(48)',\n",
-       " 'κ  NNNC(86)',\n",
-       " 'δ HCCC(14) δ CCCC(48)',\n",
-       " 'δ HCCC(61) δ CCCC(14)',\n",
-       " 'ν CC(11) β CCC(18) β CCO(11) δ HCCC(13)',\n",
-       " 'β NCN(55)',\n",
-       " 'δ HNCC(79)',\n",
-       " 'β CCC(31) β CCC(21) β CCC(12)',\n",
-       " 'β CCC(48)',\n",
-       " 'β COC(38)',\n",
-       " 'ν CC(13) β CCC(22)',\n",
-       " 'β CCO(16) δ CCCC(11)',\n",
-       " 'β CCO(17)',\n",
-       " 'κ  OCNC(62)',\n",
-       " 'κ  OCNC(12)',\n",
-       " 'ν CC(16) β CCC(13)',\n",
-       " 'β CCO(11) β CCN(18) δ HCNC(12)',\n",
-       " 'δ HCCC(11) δ CCCC(62)',\n",
-       " 'β CCO(17) δ HNCN(46)',\n",
-       " 'β CCO(55) δ HNCN(21)',\n",
-       " 'δ HCNC(16) δ CNCN(54)',\n",
-       " 'β CCC(27)',\n",
-       " 'β COC(24)',\n",
-       " 'δ HCCC(13) δ CCCC(76)',\n",
-       " 'β CCN(39)',\n",
-       " 'β CCC(13) β CCN(12) δ CCCC(20)',\n",
-       " 'β CCO(16) β CCC(16)',\n",
-       " 'β CNC(12) β CCC(17) δ CCCC(13)',\n",
-       " 'β CNC(42)',\n",
-       " 'ν CC(13)',\n",
-       " 'δ CCCC(17)',\n",
-       " 'β CNC(18) δ CNCN(15)',\n",
-       " 'β CCC(14) δ CCCC(11)',\n",
-       " 'β NCN(34) κ  CCCC(12)',\n",
-       " 'δ CNCN(39)',\n",
-       " 'δ CNCN(51)',\n",
-       " 'δ HCCN(38)',\n",
-       " 'δ HCCN(45)',\n",
-       " 'δ HCCC(14) δ CCCC(11) δ CCCC(11) κ  CCCC(21)',\n",
-       " 'β CCC(21) δ CCCC(47)',\n",
-       " 'δ CCNC(41)',\n",
-       " 'δ CCCC(12) δ CCNC(40)',\n",
-       " 'δ CCCC(23) δ CCNC(20)',\n",
-       " 'δ COCN(63)',\n",
-       " 'δ CCNC(69)',\n",
-       " 'δ CCCC(61)',\n",
-       " 'δ CCNC(11) δ CCNC(64)',\n",
-       " 'δ CCNC(50)',\n",
-       " 'δ CCOC(62)',\n",
        " 'δ CCOC(61)']"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "result = [i.replace(\"STRE\", symbol[0]).replace(\"BEND\", symbol[1]).replace(\"TORS\", symbol[2]).replace(\"OUT\", symbol[3]) for i in fifthmod]\n",
-    "for i in fourthmod:\n",
-    "        res = i.replace(\"STRE\", symbol[0]).replace(\"BEND\", symbol[1]).replace(\"TORS\", symbol[2]).replace(\"OUT\", symbol[3])\n",
-    "        \n",
-    "        result.append(res)\n",
+    "\n",
     "result"
    ]
   },
